# toggl-rs

./: Cargo.toml  README.md  check.sh
.github/workflows/: release.yaml
src/: client.rs  client_tests.rs  error.rs  lib.rs
src/client/: me.rs  mod.rs
src/model/: me.rs
src/tests/: me.rs  mod.rs
