[package]
name = "toggl-rs"
version = "0.0.2"
edition = "2021"
description = "toggl-rs is a library to interact with track.toggl.com APIs"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
repository = "https://github.com/icepuma/toggl-rs"
readme = "README.md"
license = "WTFPL"

[features]
default = ["client"]
client = []

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
thiserror = "1"
url = "2"
serde = "1"
serde_json = "1"
owo-colors = "3"

[dev-dependencies]
mockito = "0.31"
